<resources>
    <string name="app_name">My Cart</string>
    <string name="search">Search</string>
    <string name="title_activity_cart">CartActivity</string>

    <string name="mycart">My Cart</string>
    <string name="quantity">Quantity</string>
    <string name="sum_price">Sum price</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="price">Product price</string>
    <string name="name">Product name</string>
</resources>