<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">


  <ImageView
      android:id="@+id/imgCart"
      android:layout_width="60dp"
      android:layout_height="60dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/cart" />

  <TextView
      android:id="@+id/tvCartTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:fontFamily="serif"
      android:text="@string/mycart"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imgCart" />

  <LinearLayout
      android:id="@+id/lnTitle"
      android:layout_width="match_parent"
      android:orientation="horizontal"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      app:layout_constraintBottom_toTopOf="@id/rvCart"
      app:layout_constraintTop_toBottomOf="@id/tvCartTitle"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:gravity="right"

        android:text="@string/quantity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:gravity="right"
        android:text="@string/sum_price" />
  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rvCart"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintTop_toBottomOf="@id/lnTitle"
      app:layout_constraintBottom_toTopOf="@id/totalPrice"
      >

  </androidx.recyclerview.widget.RecyclerView>

  <LinearLayout
      android:id="@+id/totalPrice"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="20dp"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="5dp"
      android:background="@drawable/cus_border">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:id="@+id/txtTotal"
          android:layout_width="55dp"
          android:layout_height="wrap_content"
          android:text="@string/total"
          android:textSize="23dp"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/txtPrice"
          android:layout_width="160dp"
          android:layout_height="wrap_content"
          android:text="@string/total"
          android:textStyle="bold"
          android:textSize="20dp"
          android:textColor="@color/unselect"
          app:layout_constraintStart_toEndOf="@id/txtTotal"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_marginStart="30dp"
          />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/btnCheckout"
          android:layout_width="110dp"
          android:layout_height="match_parent"
          android:layout_marginEnd="4dp"
          android:background="@drawable/cus_btn"

          android:drawableTop="@drawable/payment"
          android:text="@string/checkout"
          android:textColor="@color/black"
          android:textSize="10dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>