<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    android:layout_weight="1"
    android:background="@drawable/cus_border">


            <ImageView
                android:id="@+id/imgProductCart"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:src="@drawable/baseline_refresh_24"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                />
            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_marginEnd="5dp">
                <TextView
                    android:id="@+id/tvNameCart"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:text="@string/name"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textSize="13dp"
                    />

                <TextView
                    android:id="@+id/tvPriceCart"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/price"
                    android:textColor="@color/unselect"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="120dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp">

                <ImageButton
                    android:id="@+id/btnAdd"
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_add_box_24"
                    />

                <TextView
                    android:id="@+id/txtQuantity"
                    android:layout_width="20dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/quantity"
                    android:textColor="@color/unselect"
                    app:layout_constraintEnd_toStartOf="@id/tvPriceSum" />

                <ImageButton
                    android:id="@+id/btnDelete"
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_indeterminate_check_box_24"
                   />

            </LinearLayout>
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tvPriceSum"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/price"
                    android:textColor="@color/unselect"

                    android:textSize="12dp" />
            </LinearLayout>














</LinearLayout>